forgot about ip from aws

--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^1.17.3",
     "sequelize": "^4.37.6",
     "socket.io": "^2.1.0",
-    "sqlite3": "^4.0.0"
+    "sqlite3": "^4.0.0",
+    "jsdom": "^11.10.0"
   }
 }
